--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,9 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="/help">Help</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/create">Create Project</a>
               </li>
             </ul>
