create repo in group with required features

--- a/templates/help.html
+++ b/templates/help.html
@@ -26,9 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/help">Help</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/create">Create Project</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <span class="navbar-text">
                     Powered by <b>Git Lab</b> API
@@ -41,8 +41,8 @@
         <div class="card-header">
         </div>
         <div class="card-body">
-            <h5 class="card-title">Get Group projects information</h5>
-            <p class="card-text">http://127.0.0.1:5000/get/<b>group_id or group_name</b></p>
+            <h5 class="card-title">Get project information</h5>
+            <p class="card-text">http://127.0.0.1:5000/get/<b>project_id</b></p>
         </div>
     </div>
     <div class="card text-center">
