--- a/templates/help.html
+++ b/templates/help.html
@@ -55,5 +55,10 @@
         </div>
     </div>
 </body>
+<footer>
+    <div class="card-footer text-muted">
+        <p style=" position: absolute; bottom: 0; left: 0; width: 100%; text-align: center;">Developed by <b>Buddhitha Rathnayaka</b></p>	
+    </div>
+</footer>
 
 </html>
