--- a/templates/index.html
+++ b/templates/index.html
@@ -87,5 +87,9 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
 </body>
-
+<footer>
+  <div class="card-footer text-muted">
+    <p style="bottom: 0; left: 0; width: 100%; text-align: center;">Developed by <b>Buddhitha Rathnayaka</b></p>	
+</div>
+</footer>
 </html>
